samples/_failures_safe/1761073136_8329f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76bfd64a.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_76bfd64a.c:162:34: error: missing terminating " character
  162 |         case STATE_READY: return "READ
      |                                  ^~~~~
./samples/SAFE/__tmp_76bfd64a.c:162:9: error: expected expression at end of input
  162 |         case STATE_READY: return "READ
      |         ^~~~
./samples/SAFE/__tmp_76bfd64a.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_76bfd64a.c:162:9: error: expected declaration or statement at end of input
